# result-lib

./: .gitattributes  .gitignore  Makefile.am  README.md  configure.ac  package.json  result.pc.in
.github/workflows/: build.yml
doc/: CONTRIBUTING.md  README.md  SUPPORT.md  _config.yml  index.md
src/: result.h
test/: f_filter.c  f_flat_map.c  f_flat_map_failure.c  f_flat_map_success.c  f_get_failure_or_else.c  f_get_success_or_else.c  f_get_success_or_else_map.c  f_handle.c  f_handle_failure.c  f_handle_success.c  f_if_failure.c  f_if_success.c  f_if_success_or_else.c  f_is_failure.c  f_is_success.c  f_map.c  f_map_failure.c  f_map_success.c  failure.c  s_filter_false.c  s_filter_true.c  s_flat_map.c  s_flat_map_failure.c  s_flat_map_success.c  s_get_failure_or_else.c  s_get_success_or_else.c  s_get_success_or_else_map.c  s_handle.c  s_handle_failure.c  s_handle_success.c  s_if_failure.c  s_if_success.c  s_if_success_or_else.c  s_is_failure.c  s_is_success.c  s_map.c  s_map_failure.c  s_map_success.c  success.c  testing.h
